draft emotion design

--- a/Big_Data_Project.ipynb
+++ b/Big_Data_Project.ipynb
@@ -2,6 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##########################################################################################\n",
+    "############################### Final Design #############################################\n",
+    "## Final design with:\n",
+    "## Input: Word2vec vectors\n",
+    "## Output: One hot matrix\n",
+    "## Emotions: Positive 0, Neutral 1 and Negative 2\n",
+    "############################### start of code ############################################\n",
+    "import keras\n",
+    "from keras.preprocessing import sequence\n",
+    "from keras.models import Sequential, load_model\n",
+    "from keras.layers import LSTM, Dense, Dropout, Activation, Embedding, TimeDistributed\n",
+    "import word2vec_utils\n",
+    "\n",
+    "## Size of data\n",
+    "\n",
+    "embed_dim = 300\n",
+    "data_dim = 1\n",
+    "timesteps = 25\n",
+    "vocab_size = 8100\n",
+    "emot_size = 3\n",
+    "full_dim = embed_dim + emot_size\n",
+    "## Convert input to word to vec matrix\n",
+    "\n",
+    "## Convert output to one hot matrix\n",
+    "\n",
+    "## Neural network model\n",
+    "\n",
+    "keras.optimizers.Adam(lr=0.005, beta_1=0.9, beta_2=0.999, epsilon=1e-08, decay=0.0)\n",
+    "keras.optimizers.RMSprop(lr=0.001, rho=0.9, epsilon=1e-08, decay=0.0)\n",
+    "keras.optimizers.SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "\n",
+    "## Emotional model\n",
+    "model_Em = Sequential()\n",
+    "model_Em.add(LSTM(embed_dim,input_shape=(timesteps,embed_dim),return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
+    "model_Em.add(LSTM(embed_dim,return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
+    "model_Em.add(LSTM(embed_dim,return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
+    "model_Em.add(Dense(emot_size, activation='softmax'))\n",
+    "\n",
+    "model_Em.compile(loss='mse',\n",
+    "              optimizer='rmsprop',\n",
+    "              metrics=['accuracy']\n",
+    "              )\n",
+    "\n",
+    "model_Em.fit(AB_train,AB_emtrain,\n",
+    "          batch_size=128, nb_epoch=20,\n",
+    "          validation_data=(AB_val,AB_emval))\n",
+    "\n",
+    "Em.predict(AB_train).concatenate(AB_train,axis=0)\n",
+    "## model_A takes A's word2vec matirx as input \n",
+    "model_A = Sequential()\n",
+    "model_A.add(LSTM(full_dim,input_shape=(timesteps,full_dim),return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
+    "\n",
+    "## model_B takes B's word2vec matirx as input \n",
+    "model_B = Sequential()\n",
+    "model_B.add(LSTM(full_dim,input_shape=(timesteps,full_dim),return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
+    "\n",
+    "## model_ABA concatenates both A and B input and predicts next A\n",
+    "model_ABA = Sequential()\n",
+    "model_ABA.add(Merge([modelA, modelB], mode = 'concat'))\n",
+    "model_ABA.add(LSTM(full_dim,return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
+    "model_ABA.add(LSTM(full_dim,return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
+    "model_ABA.add(TimeDistributed(Dense(vocab_size,activation='softmax')))\n",
+    "\n",
+    "\n",
+    "model_ABA.compile(loss='mse',\n",
+    "              optimizer='rmsprop',\n",
+    "              metrics=['accuracy']\n",
+    "              )\n",
+    "\n",
+    "model_ABA.fit([A_train,B_train], A_nexttrain,\n",
+    "          batch_size=128, nb_epoch=20,\n",
+    "          validation_data=(x_val, y_val))\n",
+    "model_ABA.save('aichatbot.h5')\n",
+    "\n",
+    "score = model_ABA.evaluate([A_test,B_test], A_nexttest, batch_size=64)\n",
+    "\n",
+    "print(\"\\nModel Accuracy: %.2f%%\" % (score[1]*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "collapsed": false
@@ -457,6 +544,15 @@
     "#b=np.eye(8100)[y]\n",
     "print(np.amax(y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
