Added save weights

--- a/Big_Data_Project.ipynb
+++ b/Big_Data_Project.ipynb
@@ -2,11 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "Failed to import pydot. You must install pydot and graphviz for `pydotprint` to work.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-350fe5a78b89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mload_model\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDropout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mActivation\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mEmbedding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTimeDistributed\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvisualize_util\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mplot\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mto_graph\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[1;31m#import theano.d3viz as d3v\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mword2vec_utils\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python35\\lib\\site-packages\\keras\\utils\\visualize_util.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[1;32mimport\u001b[0m \u001b[0mpydot\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mpydot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_graphviz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     raise ImportError('Failed to import pydot. You must install pydot'\n\u001b[0m\u001b[1;32m     15\u001b[0m                       ' and graphviz for `pydotprint` to work.')\n\u001b[1;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: Failed to import pydot. You must install pydot and graphviz for `pydotprint` to work."
+     ]
+    }
+   ],
    "source": [
     "##########################################################################################\n",
     "############################### Final Design #############################################\n",
@@ -19,6 +39,8 @@
     "from keras.preprocessing import sequence\n",
     "from keras.models import Sequential, load_model\n",
     "from keras.layers import LSTM, Dense, Dropout, Activation, Embedding, TimeDistributed\n",
+    "from keras.utils.visualize_util import plot, to_graph\n",
+    "#import theano.d3viz as d3v\n",
     "import word2vec_utils\n",
     "\n",
     "## Size of data\n",
@@ -54,15 +76,36 @@
     "model_Em.fit(AB_train,AB_emtrain,\n",
     "          batch_size=128, nb_epoch=20,\n",
     "          validation_data=(AB_val,AB_emval))\n",
-    "\n",
+    "model.save_weights('model_Em_weights.h5')\n",
     "Em.predict(AB_train).concatenate(AB_train,axis=0)\n",
-    "## model_A takes A's word2vec matirx as input \n",
+    "\n",
+    "## model_A takes A's word2vec matrix as input \n",
     "model_A = Sequential()\n",
     "model_A.add(LSTM(full_dim,input_shape=(timesteps,full_dim),return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
     "\n",
-    "## model_B takes B's word2vec matirx as input \n",
+    "model_A.compile(loss='mse',\n",
+    "              optimizer='rmsprop',\n",
+    "              metrics=['accuracy']\n",
+    "              )\n",
+    "\n",
+    "model_A.fit(A_train, A_train,\n",
+    "          batch_size=128, nb_epoch=20,\n",
+    "          validation_data=(x_val, y_val))\n",
+    "model.save_weights('model_A_weights.h5')\n",
+    "\n",
+    "## model_B takes B's word2vec matrix as input \n",
     "model_B = Sequential()\n",
     "model_B.add(LSTM(full_dim,input_shape=(timesteps,full_dim),return_sequences=True, dropout_W=0.2, dropout_U=0.2))\n",
+    "\n",
+    "model_B.compile(loss='mse',\n",
+    "              optimizer='rmsprop',\n",
+    "              metrics=['accuracy']\n",
+    "              )\n",
+    "\n",
+    "model_B.fit(B_train, B_train,\n",
+    "          batch_size=128, nb_epoch=20,\n",
+    "          validation_data=(x_val, y_val))\n",
+    "model.save_weights('model_B_weights.h5')\n",
     "\n",
     "## model_ABA concatenates both A and B input and predicts next A\n",
     "model_ABA = Sequential()\n",
@@ -76,11 +119,13 @@
     "              optimizer='rmsprop',\n",
     "              metrics=['accuracy']\n",
     "              )\n",
-    "\n",
+    "#graph = to_graph(model_ABA, show_shape=True)\n",
+    "#graph.write_png(\"model.png\")\n",
+    "#d3v.d3viz(model_ABA.get_output(), 'test.html')\n",
     "model_ABA.fit([A_train,B_train], A_nexttrain,\n",
     "          batch_size=128, nb_epoch=20,\n",
     "          validation_data=(x_val, y_val))\n",
-    "model_ABA.save('aichatbot.h5')\n",
+    "model.save_weights('model_ABA_weights.h5')\n",
     "\n",
     "score = model_ABA.evaluate([A_test,B_test], A_nexttest, batch_size=64)\n",
     "\n",
