--- a/Chat_Network.ipynb
+++ b/Chat_Network.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -20,6 +18,7 @@
     "from keras.preprocessing import sequence\n",
     "from keras.models import Sequential, load_model, Model\n",
     "from keras.layers import LSTM, Dense, Dropout, Activation, Embedding, TimeDistributed, Concatenate, Input\n",
+    "from keras.callbacks import EarlyStopping\n",
     "import word2vec_utils as w2v\n",
     "import data\n",
     "import numpy as np\n",
@@ -32,7 +31,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -43,7 +42,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -54,42 +53,34 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "word2vec_utils.py:141: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n",
-      "  if A1 == None:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "A1_train,B_train,A2_train = w2v.get_n_training_data(20,A1,B,A2,model)\n",
+    "A1_train,B_train,A2_train = w2v.get_n_training_data(20000,A1,B,A2)\n",
     "A1B_train = np.concatenate((A1_train,B_train),axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def null_punisher(y_true, y_pred, L = 2):\n",
+    "def null_punisher(y_true, y_pred ):\n",
     "    '''Provides stronger incentive to avoid Null'''\n",
+    "    L = 3\n",
     "    error = keras.losses.cosine_proximity( y_true,y_pred)\n",
-    "    if y_true != np.array([0]*300 + [1]):\n",
+    "    if y_true != BLANK:\n",
     "        error *= L\n",
     "    return error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -100,9 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -139,10 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "AB_Input = Input(shape =(MAX_SENT_LENGTH*2,EMBED_DIM))\n",
@@ -153,106 +142,84 @@
     "\n",
     "AB_output = AB_layer3(AB_layer2(AB_layer1(AB_Input)))\n",
     "\n",
-    "model = Model(inputs = [ AB_Input], outputs = [AB_output])\n",
-    "model.compile(loss=null_punisher,\n",
-    "              optimizer='rmsprop',\n",
+    "chat_model = Model(inputs = [ AB_Input], outputs = [AB_output])\n",
+    "chat_model.compile(loss=null_punisher,\n",
+    "              optimizer='Adam',\n",
     "              metrics=['accuracy']\n",
-    "              )"
+    "              )\n",
+    "early_stopping = EarlyStopping( monitor = 'val_acc',patience = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anthony/anaconda2/lib/python2.7/site-packages/ipykernel/__main__.py:3: UserWarning: The `nb_epoch` argument in `fit` has been renamed `epochs`.\n",
-      "  app.launch_new_instance()\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 18 samples, validate on 2 samples\n",
-      "Epoch 1/1\n",
-      "18/18 [==============================] - 0s - loss: -8.5940e-04 - acc: 0.3333 - val_loss: 3.5087e-04 - val_acc: 0.0000e+00\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
+      "Train on 19500 samples, validate on 500 samples\n",
+      "Epoch 1/20\n",
+      "19500/19500 [==============================] - 785s - loss: -0.0098 - acc: 0.8399 - val_loss: -0.0099 - val_acc: 0.8833\n",
+      "Epoch 2/20\n",
+      "19500/19500 [==============================] - 1081s - loss: -0.0099 - acc: 0.8843 - val_loss: -0.0099 - val_acc: 0.9500\n",
+      "Epoch 3/20\n",
+      "19500/19500 [==============================] - 1644s - loss: -0.0099 - acc: 0.9070 - val_loss: -0.0099 - val_acc: 0.9667\n",
+      "Epoch 4/20\n",
+      "19500/19500 [==============================] - 1811s - loss: -0.0099 - acc: 0.9171 - val_loss: -0.0099 - val_acc: 0.9667\n",
+      "Epoch 5/20\n",
+      "19500/19500 [==============================] - 2031s - loss: -0.0099 - acc: 0.9234 - val_loss: -0.0099 - val_acc: 0.9833\n",
+      "Epoch 6/20\n",
+      "19500/19500 [==============================] - 1982s - loss: -0.0099 - acc: 0.9287 - val_loss: -0.0099 - val_acc: 0.9667\n",
+      "Epoch 7/20\n",
+      "19500/19500 [==============================] - 1972s - loss: -0.0099 - acc: 0.9333 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 8/20\n",
+      "19500/19500 [==============================] - 1896s - loss: -0.0099 - acc: 0.9366 - val_loss: -0.0099 - val_acc: 0.9833\n",
+      "Epoch 9/20\n",
+      "19500/19500 [==============================] - 1797s - loss: -0.0099 - acc: 0.9394 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 10/20\n",
+      "19500/19500 [==============================] - 1909s - loss: -0.0099 - acc: 0.9418 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 11/20\n",
+      "19500/19500 [==============================] - 1944s - loss: -0.0099 - acc: 0.9432 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 12/20\n",
+      "19500/19500 [==============================] - 1928s - loss: -0.0099 - acc: 0.9447 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 13/20\n",
+      "19500/19500 [==============================] - 1880s - loss: -0.0099 - acc: 0.9459 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 14/20\n",
+      "19500/19500 [==============================] - 1871s - loss: -0.0099 - acc: 0.9470 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 15/20\n",
+      "19500/19500 [==============================] - 1814s - loss: -0.0099 - acc: 0.9480 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 16/20\n",
+      "19500/19500 [==============================] - 1761s - loss: -0.0099 - acc: 0.9492 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 17/20\n",
+      "19500/19500 [==============================] - 1715s - loss: -0.0099 - acc: 0.9499 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 18/20\n",
+      " 7600/19500 [==========>...................] - ETA: 1058s - loss: -0.0099 - acc: 0.9503"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x25cbd0a50>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit([A1B_train], A2_train,\n",
-    "          batch_size=10, epochs=1,\n",
-    "          validation_split = 0.1 )"
+    "chat_model.load_weights('chat_net.h5',by_name=True)\n",
+    "chat_model.fit([A1B_train], A2_train,\n",
+    "          batch_size=200, epochs=20,\n",
+    "          validation_split = 0.025 )\n",
+    "chat_model.save('chat_net.h5')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 1])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import pickle\n",
-    "with open('unknown_words_stored.pkl', 'w+') as f:\n",
-    "    pickle.dump(a, f)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -281,7 +248,11 @@
    "source": [
     "a = {}\n",
     "a['__BLANK__'] = BLANK\n",
-    "a['__BLANK__']"
+    "a['__BLANK__']\n",
+    "\n",
+    "import pickle\n",
+    "with open('unknown_words_stored.pkl', 'w+') as f:\n",
+    "    pickle.dump(a, f)"
    ]
   },
   {
@@ -298,9 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -319,88 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "1.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for word in np.concatenate((A1_train,B_train),axis=1)[0]:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -419,24 +308,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(20, 60, 301)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'A2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-43f6c2051f64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mA2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'A2' is not defined"
+     ]
     }
    ],
    "source": [
-    "A2_train.shape"
+    "A2.shape"
    ]
   },
   {
@@ -465,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
