add trained wights

--- a/Chat_Network.ipynb
+++ b/Chat_Network.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,11 @@
       "Epoch 17/20\n",
       "19500/19500 [==============================] - 1715s - loss: -0.0099 - acc: 0.9499 - val_loss: -0.0099 - val_acc: 1.0000\n",
       "Epoch 18/20\n",
-      " 7600/19500 [==========>...................] - ETA: 1058s - loss: -0.0099 - acc: 0.9503"
+      "19500/19500 [==============================] - 1705s - loss: -0.0099 - acc: 0.9507 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 19/20\n",
+      "19500/19500 [==============================] - 1657s - loss: -0.0099 - acc: 0.9515 - val_loss: -0.0099 - val_acc: 1.0000\n",
+      "Epoch 20/20\n",
+      "19500/19500 [==============================] - 1628s - loss: -0.0099 - acc: 0.9523 - val_loss: -0.0099 - val_acc: 1.0000\n"
      ]
     }
    ],
