updated python notebook with unvectorize functions

--- a/Chat_Network.ipynb
+++ b/Chat_Network.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,191 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0.05078125 -0.09326172  0.06494141 ..., -0.04150391  0.00817871  0.        ]\n",
+      "  [ 0.140625   -0.02722168  0.03295898 ..., -0.08935547  0.10205078  0.        ]\n",
+      "  [ 0.05078125 -0.09326172  0.06494141 ..., -0.04150391  0.00817871  0.        ]\n",
+      "  ..., \n",
+      "  [ 0.          0.          0.         ...,  0.          0.          1.        ]\n",
+      "  [ 0.          0.          0.         ...,  0.          0.          1.        ]\n",
+      "  [ 0.          0.          0.         ...,  0.          0.          1.        ]]\n",
+      "\n",
+      " [[ 0.05078125 -0.09326172  0.06494141 ..., -0.04150391  0.00817871  0.        ]\n",
+      "  [ 0.140625   -0.02722168  0.03295898 ..., -0.08935547  0.10205078  0.        ]\n",
+      "  [ 0.05078125 -0.09326172  0.06494141 ..., -0.04150391  0.00817871  0.        ]\n",
+      "  ..., \n",
+      "  [ 0.          0.          0.         ...,  0.          0.          1.        ]\n",
+      "  [ 0.          0.          0.         ...,  0.          0.          1.        ]\n",
+      "  [ 0.          0.          0.         ...,  0.          0.          1.        ]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chat_model.load_weights('chat_net.h5',by_name=True)\n",
+    "\n",
+    "A1_test,B_test,A2_test = w2v.get_n_training_data(2,A1[10000:],B[10000:],A2[10000:])\n",
+    "A1B_test = np.concatenate((A1_test,B_test),axis=1)\n",
+    "print A1B_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "w2v.unvectorize_initialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = chat_model.predict(A1B_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('w2v word-score', u'1', 0.9980672597885132, '\\n', 'uk word-score', 'a', 0.056033043745772247)\n",
+      "('w2v word-score', u'@', 0.9984095692634583, '\\n', 'uk word-score', 'break-', 0.052939259401523289)\n",
+      "('w2v word-score', u'Not', 0.9968540668487549, '\\n', 'uk word-score', 'and', 0.082096403343257435)\n",
+      "('w2v word-score', u'the', 0.9954041242599487, '\\n', 'uk word-score', 'a', 0.072104772078892515)\n",
+      "('w2v word-score', u'hacking', 0.9770256876945496, '\\n', 'uk word-score', 'to', 0.076789168099464206)\n",
+      "('w2v word-score', u'Darmer', 0.315388947725296, '\\n', 'uk word-score', 'and', 0.97905361822752179)\n",
+      "('w2v word-score', u'gagging', 0.8061763048171997, '\\n', 'uk word-score', 'and', 0.5102656647626258)\n",
+      "('w2v word-score', u'Regal_Beagle', 0.31222817301750183, '\\n', 'uk word-score', 'and', 0.96898525661626256)\n",
+      "('w2v word-score', u'spitting', 0.9452880620956421, '\\n', 'uk word-score', 'and', 0.23605261754542997)\n",
+      "('w2v word-score', u'part', 0.9399054050445557, '\\n', 'uk word-score', '.', 0.16153080103069159)\n",
+      "('w2v word-score', u'stablemasters', 0.2521167993545532, '\\n', 'uk word-score', '.', 0.94980680968755216)\n",
+      "('w2v word-score', u'Please', 0.7800537347793579, '\\n', 'uk word-score', '.', 0.33050476358264885)\n",
+      "('w2v word-score', u'Escovedo', 0.2515993118286133, '\\n', 'uk word-score', '.', 0.94833911788477876)\n",
+      "('w2v word-score', u'Stones', 0.2640480697154999, '\\n', 'uk word-score', '.', 0.66693084777398515)\n",
+      "('w2v word-score', u'Stones', 0.26274794340133667, '\\n', 'uk word-score', '.', 0.64330988315437654)\n",
+      "('w2v word-score', u'Thomas_Eakins_masterpiece', 0.2609696090221405, '\\n', 'uk word-score', '.', 0.73031849984655095)\n",
+      "('w2v word-score', u'Escovedo', 0.27731770277023315, '\\n', 'uk word-score', '.', 0.76920363240902667)\n",
+      "('w2v word-score', u'unrecouped', 0.25573599338531494, '\\n', 'uk word-score', '.', 0.6133006643454022)\n",
+      "('w2v word-score', u'spitting', 0.2518787980079651, '\\n', 'uk word-score', '.', 0.54381164794955095)\n",
+      "('w2v word-score', u'part', 0.2898973524570465, '\\n', 'uk word-score', '.', 0.64707168413567973)\n",
+      "('w2v word-score', u'La_Finca', 0.2576155662536621, '\\n', 'uk word-score', '.', 0.73882694330097332)\n",
+      "('w2v word-score', u'Escovedo', 0.3003111779689789, '\\n', 'uk word-score', '.', 0.72156313912462822)\n",
+      "('w2v word-score', u'Minolta_camera', 0.2793729305267334, '\\n', 'uk word-score', '.', 0.4998956985140936)\n",
+      "('w2v word-score', u'Sectarian_violence_periodically', 0.25563251972198486, '\\n', 'uk word-score', '.', 0.15334926546893182)\n",
+      "('w2v word-score', u'bloodless_putsch', 0.2619220018386841, '\\n', 'uk word-score', '.', 0.11899012658364337)\n",
+      "2 8 1 @ Not the hacking and gagging and spitting part . Please . . . . . . . . . . . Sectarian_violence_periodically bloodless_putsch _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_words = w2v.unvectorize_sentence( predicted[0] )\n",
+    "print( predicted_words )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.92014e-06\n",
+      "4.56457e-05\n",
+      "0.000285789\n",
+      "0.000822868\n",
+      "0.00136276\n",
+      "0.00204014\n",
+      "0.00225027\n",
+      "-0.000994075\n",
+      "-0.00131872\n",
+      "-0.00209939\n",
+      "-0.0021074\n",
+      "-0.00377722\n",
+      "-0.00487315\n",
+      "-0.000230759\n",
+      "0.108067\n",
+      "0.724087\n",
+      "0.939856\n",
+      "0.9877\n",
+      "0.996966\n",
+      "0.968217\n",
+      "0.865467\n",
+      "0.803786\n",
+      "0.839297\n",
+      "0.99998\n",
+      "0.999996\n",
+      "0.999999\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in predicted[0]:\n",
+    "    print word[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -261,13 +445,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1 9 1 @ Yes I am .', '1 9 1 @ What are you doing ?', '1 9 1 @ Nothing .')\n"
+     ]
+    }
+   ],
    "source": [
-    "EMBED_DIM = len(BLANK)"
+    "print( A1[30000], B[30000],A2[30000] )"
    ]
   },
   {
