--- a/reinforce.ipynb
+++ b/reinforce.ipynb
@@ -2,24 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name gof",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-ecc461a2daee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;31m#KERAS_BACKEND=\"theano\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[1;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnp_utils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mto_categorical\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python2\\lib\\site-packages\\keras\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0m__future__\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mabsolute_import\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mactivations\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mapplications\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbackend\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python2\\lib\\site-packages\\keras\\activations.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msix\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mwarnings\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mbackend\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mK\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgeneric_utils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdeserialize_keras_object\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLayer\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python2\\lib\\site-packages\\keras\\backend\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m_BACKEND\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'theano'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m     \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Using Theano backend.\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m     \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mtheano_backend\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m \u001b[1;32melif\u001b[0m \u001b[0m_BACKEND\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'tensorflow'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Using TensorFlow backend.\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python2\\lib\\site-packages\\keras\\backend\\theano_backend.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdefaultdict\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcontextlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcontextmanager\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[1;32mimport\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mifelse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtensor\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python2\\lib\\site-packages\\theano\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     64\u001b[0m     object2, utils)\n\u001b[1;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m from theano.compile import (\n\u001b[0m\u001b[1;32m     67\u001b[0m     \u001b[0mSymbolicInput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIn\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0mSymbolicOutput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mOut\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python2\\lib\\site-packages\\theano\\compile\\__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m         SpecifyShape, specify_shape, register_specify_shape_c_code)\n\u001b[1;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfunction_module\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mC:\\Users\\anul\\Anaconda2\\envs\\python2\\lib\\site-packages\\theano\\compile\\function_module.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mconfig\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgof\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mizip\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgof\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgraph\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name gof"
+     ]
+    }
+   ],
    "source": [
     "#KERAS_BACKEND=\"theano\"\n",
     "import numpy as np\n",
     "import keras\n",
     "from keras.utils.np_utils import to_categorical\n",
     "from keras.models import model_from_json\n",
-    "\n",
+    "import subprocess\n",
+    "import shlex\n",
+    "import Tkinter as tk\n",
+    "try:\n",
+    "    import ttk as ttk\n",
+    "    import ScrolledText\n",
+    "except ImportError:\n",
+    "    import tkinter.ttk as ttk\n",
+    "    import tkinter.scrolledtext as ScrolledText\n",
+    "import time\n",
     "class neural_chatbot():\n",
     "    \n",
     "    def __init__(self):\n",
     "        #self.initialize()\n",
     "        self.load_model()\n",
-    "        self.sys_prediction=\n",
+    "        self.sys_prediction='1 9 1 @Hi'\n",
     "    def save_model(self):\n",
     "        # serialize model to JSON\n",
     "        model_json = self.model_ABA.to_json()\n",
@@ -38,7 +73,16 @@
     "        # load weights into new model\n",
     "        self.model_ABA.load_weights(\"model_ABA.h5\")\n",
     "        print(\"Loaded model from disk\")\n",
-    "        \n",
+    "    \n",
+    "    def RateSentiment(sentiString):\n",
+    "        #open a subprocess using shlex to get the command line string into the correct args list format\n",
+    "        p = subprocess.Popen(shlex.split(\"C:/ProgramData/Oracle/java/javapath/java -jar C:/Users/anul/Downloads/SentiStrength.jar stdin sentidata C:/Users/anul/Downloads/SentStrength_Data_Sept2011/\"),stdin=subprocess.PIPE,stdout=subprocess.PIPE,stderr=subprocess.PIPE)\n",
+    "        #communicate via stdin the string to be rated. Note that all spaces are replaced with +\n",
+    "        stdout_text, stderr_text = p.communicate(sentiString.replace(\" \",\"+\"))\n",
+    "        #remove the tab spacing between the positive and negative ratings. e.g. 1    -5 -> 1-5\n",
+    "        stdout_text = stdout_text.rstrip().replace(\"\\t\",\"\")\n",
+    "        return stdout_text    \n",
+    "    \n",
     "    def initialize(self):\n",
     "        \n",
     "        self.model_A = Sequential()\n",
@@ -72,7 +116,7 @@
     "        self.model_ABA.load_weights('model_ABA_weights.h5')\n",
     "        \n",
     "    def reinforcement_learn(user_emotion,sys_response):\n",
-    "        total_emo = user_emotion[0] + user_emotion[1]\n",
+    "        total_emo = int(user_emotion[0]) - int(user_emotion[3])\n",
     "        sys_res = np.argmax(sys_response, axis=3)\n",
     "        if total_emo > 0:\n",
     "            #sys_res = (10*sys_res)+10\n",
@@ -84,17 +128,21 @@
     "        self.save_model()\n",
     "        self.load_model()\n",
     "        \n",
-    "    def convert3d_to_4d(sys_response3d):\n",
-    "        sys_res3d_standardized = (10*sys_res)+10\n",
-    "        sys_response = to_categorical(sys_res3d_standardized.astype(int),20).reshape((1,300,-1,20))\n",
+    "    #def convert3d_to_4d(sys_response3d):\n",
+    "    #    sys_res3d_standardized = (10*sys_res)+10\n",
+    "    #    sys_response = to_categorical(sys_res3d_standardized.astype(int),20).reshape((1,300,-1,20))\n",
     "\n",
     "    def model_response(User_B):\n",
     "        #User_A1 = \"5 5 1 @I really love you. I think I want to marry you!\"\n",
     "        #User_B = \"1 5 5 @yeah well I hate you and never want to see you again! \"\n",
-    "        #User_A1 = w2v.vectorize( w2v_model, User_A1 , pad_length = max_sent_length) \n",
-    "        User_B  = w2v.vectorize( w2v_model, User_B, pad_length = max_sent_length) \n",
-    "        reinforcement_learn(self.sys_prediction)\n",
-    "        self.user_input = [ np.array( [self.sys_prediction]), np.array([User_B]) ]\n",
+    "        #User_A1 = w2v.vectorize( w2v_model, User_A1 , pad_length = max_sent_length)\n",
+    "        Sen_User_B = RateSentiment(User_B)\n",
+    "        reinforcement_learn(Sen_User_B,self.sys_prediction)\n",
+    "        \n",
+    "        User_B = Sen_User_B[0]+\" \"+str(11-int(Sen_User_B[0])-int(Sen_User_B[3]))+\" \"+Sen_User_B[3]+\" \"+\"@\"+User_B\n",
+    "        User_B_in  = w2v.vectorize( w2v_model, User_B, pad_length = max_sent_length) \n",
+    "        \n",
+    "        self.user_input = [ np.array( [self.sys_prediction]), np.array([User_B_in]) ]\n",
     "        prediction = self.model_ABA.predict(user_input)\n",
     "        sys_pred = np.argmax(prediction, axis=3)\n",
     "        self.sys_prediction = (sys_pred-10)/10\n",
@@ -121,7 +169,90 @@
     "        for prediction in prediction_vec:\n",
     "            predicted_words.append( most_likely_word(prediction,words,w2v_model))\n",
     "        ret = \" \".join(predicted_words)\n",
-    "        return( ret )"
+    "        return( ret )\n",
+    "\n",
+    "\n",
+    "class TkinterGUIExample(tk.Tk):\n",
+    "\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        \"\"\"\n",
+    "        Create & set window variables.\n",
+    "        \"\"\"\n",
+    "        tk.Tk.__init__(self, *args, **kwargs)\n",
+    "\n",
+    "        self.title(\"Di-Feelbot\")\n",
+    "        self.neuralbot = neural_chatbot()\n",
+    "        self.initialize()\n",
+    "\n",
+    "    def initialize(self):\n",
+    "        \"\"\"\n",
+    "        Set window layout.\n",
+    "        \"\"\"\n",
+    "        self.grid()\n",
+    "\n",
+    "        self.respond = ttk.Button(self, text='Get Response', command=self.get_response)\n",
+    "        self.respond.grid(column=0, row=0, sticky='nesw', padx=3, pady=3)\n",
+    "\n",
+    "        self.usr_input = ttk.Entry(self, state='normal')\n",
+    "        self.usr_input.grid(column=1, row=0, sticky='nesw', padx=3, pady=3)\n",
+    "\n",
+    "        self.conversation_lbl = ttk.Label(self, anchor=tk.E, text='Conversation:')\n",
+    "        self.conversation_lbl.grid(column=0, row=5, sticky='nesw', padx=3, pady=3)\n",
+    "\n",
+    "        self.conversation = ScrolledText.ScrolledText(self, state='disabled')\n",
+    "        self.conversation.grid(column=0, row=6, columnspan=2, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "        self.emo_lbl = ttk.Label(self, text='Sys emotion')\n",
+    "        self.emo_lbl.grid(column=0, row=1, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "        self.emoPosvalue_lbl = ttk.Label(self, text='Pos emotion',foreground='blue')\n",
+    "        self.emoPosvalue_lbl.grid(column=0, row=2, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "        self.emoNegvalue_lbl = ttk.Label(self, text='Neg emotion',foreground='red')\n",
+    "        self.emoNegvalue_lbl.grid(column=0, row=3, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "        self.emoNeuvalue_lbl = ttk.Label(self, text='Neu emotion',foreground='black')\n",
+    "        self.emoNeuvalue_lbl.grid(column=0, row=4, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "        self.uemo_lbl = ttk.Label(self, text='User emotion')\n",
+    "        self.uemo_lbl.grid(column=1, row=1, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "        self.uemoPosvalue_lbl = ttk.Label(self, text='Pos emotion',foreground='blue')\n",
+    "        self.uemoPosvalue_lbl.grid(column=1, row=2, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "        self.uemoNegvalue_lbl = ttk.Label(self, text='Neg emotion',foreground='red')\n",
+    "        self.uemoNegvalue_lbl.grid(column=1, row=3, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "        self.uemoNeuvalue_lbl = ttk.Label(self, text='Neu emotion',foreground='black')\n",
+    "        self.uemoNeuvalue_lbl.grid(column=1, row=4, sticky='nesw', padx=3, pady=3)\n",
+    "        \n",
+    "\n",
+    "    def get_response(self):\n",
+    "        \"\"\"\n",
+    "        Get a response from the chatbot and display it.\n",
+    "        \"\"\"\n",
+    "        user_input = self.usr_input.get()\n",
+    "        self.usr_input.delete(0, tk.END)\n",
+    "\n",
+    "        response = 'Hi'#self.neuralbot.model_response(user_input)\n",
+    "        x=self.neuralbot.RateSentiment(usr_input)\n",
+    "        self.emoPosvalue_lbl['text'] = response[0]\n",
+    "        self.emoNegvalue_lbl['text'] = response[4]\n",
+    "        self.emoNeuvalue_lbl['text'] = response[2]\n",
+    "        self.uemoPosvalue_lbl['text'] = x[0]\n",
+    "        self.uemoNegvalue_lbl['text'] = x[3]\n",
+    "        self.uemoNeuvalue_lbl['text'] = str(11-int(x[0])-int(x[3]))\n",
+    "        self.conversation['state'] = 'normal'\n",
+    "        self.conversation.insert(\n",
+    "            tk.END, \"Human: \" + user_input + \"\\n\" + \"ChatBot: \" + str(response[7:]) + \"\\n\"\n",
+    "        )\n",
+    "        self.conversation['state'] = 'disabled'\n",
+    "\n",
+    "        time.sleep(0.5)\n",
+    "\n",
+    "\n",
+    "gui_example = TkinterGUIExample()\n",
+    "gui_example.mainloop()"
    ]
   },
   {
@@ -256,21 +387,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:python35]",
+   "display_name": "Python [conda env:python2]",
    "language": "python",
-   "name": "conda-env-python35-py"
+   "name": "conda-env-python2-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
