--- a/Train_w2v_model.ipynb
+++ b/Train_w2v_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -19,17 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def train(sentences, outf, size=100, win=7, wkrs=8, epochs = 30):\n",
-    "    sentences = map(lambda x: unicode(x,errors='ignore').split(), sentences)\n",
+    "def train(sentences, outf, size=100, win=7, wkrs=8, epochs = 1):\n",
+    "    sentences = map(lambda x: unicode(x,errors='ignore').lower().split(), sentences)\n",
     "    print( type(sentences[0]))\n",
     "    model = Word2Vec(sentences, size=size, window=win,\n",
-    "                     min_count=0, workers=wkrs, iter = epochs)\n",
+    "                     min_count=1, workers=wkrs, iter = epochs)\n",
     "    model.save(outf)\n",
     "\n",
     "    return model"
@@ -37,18 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sentences = np.load('All_Lines.npy')"
+    "#sentences = np.load('All_Lines.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -81,71 +79,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "415557"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(sentences)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "68751"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(w2v_model.wv.vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "68751"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(w2v_model.wv.vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
+   "source": [
+    "word_count = []\n",
+    "words = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for word in w2v_model.wv.vocab:\n",
+    "    word_count.append( (w2v_model.wv.vocab[word].count, word ) )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_count.sort(reverse=True)\n",
+    "for tup in word_count:\n",
+    "    words.append( str(tup[1]) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"knife'\""
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words[50000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('words_in_order_of_freq.npy',words)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": []
   }
  ],
