add 'better' trained version of the one hot network

--- a/Train_w2v_model.ipynb
+++ b/Train_w2v_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,11 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def train(sentences, outf, size=100, win=7, wkrs=8, epochs = 1):\n",
+    "def train(sentences, outf, size=100, win=7, wkrs=8, epochs = 30):\n",
     "    sentences = map(lambda x: unicode(x,errors='ignore').lower().split(), sentences)\n",
     "    print( type(sentences[0]))\n",
     "    model = Word2Vec(sentences, size=size, window=win,\n",
@@ -35,18 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#sentences = np.load('All_Lines.npy')"
+    "sentences = np.load('All_Lines.npy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "word_count = []\n",
@@ -90,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for word in w2v_model.wv.vocab:\n",
@@ -100,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "word_count.sort(reverse=True)\n",
@@ -131,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.save('words_in_order_of_freq.npy',words)"
