--- a/AmergeB_30_time_step_LSTM.ipynb
+++ b/AmergeB_30_time_step_LSTM.ipynb
@@ -232,7 +232,8 @@
    "outputs": [],
    "source": [
     "chat_model.load_weights('a_pretrain.h5',by_name=True)\n",
-    "chat_model.load_weights('b_pretrain.h5',by_name=True)"
+    "chat_model.load_weights('b_pretrain.h5',by_name=True)\n",
+    "chat_model.load_weights('AmergeB_len30_30dim_w2v_in_and_out.h5')"
    ]
   },
   {
